hphp/test/zend/good/ext/mysqli/tests/mysqli_stmt_fetch_geom.php.skipif
<?php
	require_once('skipif.inc');
	require_once('skipifemb.inc');
	require_once('skipifconnectfailure.inc');

	if (!defined("MYSQLI_TYPE_GEOMETRY"))
		die("skip MYSQLI_TYPE_GEOMETRY not defined");
?>