hphp/test/zend/bad/ext/mysql/tests/mysql_create_db.php.skipif
<?php
require_once('skipif.inc');
if (!function_exists('mysql_create_db'))
	die("Skip mysql_create_db() exists only in old versions of the libmysql.");
?>